discussion/kv_engine/186886/186886_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54810: TimingsTest for values > max tracked

Change-Id: I8ec46eff15304b16f7fe4ed2d0170c87afb945e9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2023-02-16 15:32:26.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-02-16 15:32:41.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/338344/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-16 16:47:50.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1167/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/timings_test.cc:15:30: error: no member named "testing" in the global namespace [clang-diagnostic-error]
class TimingsTest : public ::testing::Test {
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/timings_test.cc:15:39: error: expected class name [clang-diagnostic-error]
class TimingsTest : public ::testing::Test {
                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/timings_test.cc:26:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TEST_F(TimingsTest, Overflow) {
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/timings_test.cc:26:21: error: unknown type name "Overflow" [clang-diagnostic-error]
TEST_F(TimingsTest, Overflow) {
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/timings_test.cc:29:5: error: use of undeclared identifier "timings" [clang-diagnostic-error]
    timings.collect(cb::mcbp::ClientOpcode::Get, 1ms);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/timings_test.cc:31:13: error: use of undeclared identifier "timings" [clang-diagnostic-error]
            timings.get_timing_histogram(uint8_t(cb::mcbp::ClientOpcode::Get));
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/timings_test.cc:38:5: error: use of undeclared identifier "timings" [clang-diagnostic-error]
    timings.collect(cb::mcbp::ClientOpcode::Get, maxTracked * 2);
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1167/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/daemon/timings_test.cc:15:30:
error: no member named "testing" in the global namespace [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1167/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1402/ : FAILURE

Failure of GoogleTest "TimingsTest.Overflow":

<pre>
[ RUN      ] TimingsTest.Overflow
C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/daemon/timings_test.cc(42): error: Expected equality of these values:
  2
  histo->getValueCount()
    Which is: 1
[  FAILED  ] TimingsTest.Overflow (0 ms)
TimingsTest.Overflow
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1402/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1184/ : FAILURE

Failure of GoogleTest "TimingsTest.Overflow":

<pre>
[ RUN      ] TimingsTest.Overflow
[2023-02-16T16:35:36.050Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/daemon/timings_test.cc:42: Failure
[2023-02-16T16:35:36.050Z] Expected equality of these values:
[2023-02-16T16:35:36.050Z]   2
[2023-02-16T16:35:36.050Z]   histo->getValueCount()
[2023-02-16T16:35:36.050Z]     Which is: 1
[2023-02-16T16:35:36.050Z] [  FAILED  ] TimingsTest.Overflow (0 ms)
TimingsTest.Overflow
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1184/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1194/ : FAILURE

Failure of GoogleTest "TimingsTest.Overflow":

<pre>
[ RUN      ] TimingsTest.Overflow
[2023-02-16T16:42:34.034Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_neo/kv_engine/daemon/timings_test.cc:42: Failure
[2023-02-16T16:42:34.034Z] Expected equality of these values:
[2023-02-16T16:42:34.034Z]   2
[2023-02-16T16:42:34.034Z]   histo->getValueCount()
[2023-02-16T16:42:34.034Z]     Which is: 1
[2023-02-16T16:42:34.034Z] [  FAILED  ] TimingsTest.Overflow (0 ms)
TimingsTest.Overflow
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1194/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1192/ : FAILURE

Failure of GoogleTest "TransportProtocols/TuneMcbpSla.SlowCommandLogging/McbpSsl":

<pre>
[ RUN      ] TransportProtocols/TuneMcbpSla.SlowCommandLogging/McbpSsl
[2023-02-16T16:42:01.395Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/tests/testapp/testapp_tune_mcbp_sla.cc:169: Failure
[2023-02-16T16:42:01.395Z] Expected equality of these values:
[2023-02-16T16:42:01.395Z]   "COMPACT_DB"
[2023-02-16T16:42:01.395Z]   json["command"].get<std::string>()
[2023-02-16T16:42:01.395Z]     Which is: "SET_VBUCKET"
[2023-02-16T16:42:01.395Z] [  FAILED  ] TransportProtocols/TuneMcbpSla.SlowCommandLogging/McbpSsl, where GetParam() = McbpSsl (58 ms)
TransportProtocols/TuneMcbpSla.SlowCommandLogging/McbpSsl
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1192/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1185/ : FAILURE

Failure of GoogleTest "TimingsTest.Overflow":

<pre>
[ RUN      ] TimingsTest.Overflow
[2023-02-16T16:47:37.867Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/daemon/timings_test.cc:42: Failure
[2023-02-16T16:47:37.867Z] Expected equality of these values:
[2023-02-16T16:47:37.867Z]   2
[2023-02-16T16:47:37.867Z]   histo->getValueCount()
[2023-02-16T16:47:37.867Z]     Which is: 1
[2023-02-16T16:47:37.867Z] [  FAILED  ] TimingsTest.Overflow (0 ms)
TimingsTest.Overflow
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1185/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1522/ : FAILURE

Failure of GoogleTest "TimingsTest.Overflow":

<pre>
[ RUN      ] TimingsTest.Overflow
[2023-02-16T15:47:07.959Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/daemon/timings_test.cc:42: Failure
[2023-02-16T15:47:07.959Z] Expected equality of these values:
[2023-02-16T15:47:07.959Z]   2
[2023-02-16T15:47:07.959Z]   histo->getValueCount()
[2023-02-16T15:47:07.959Z]     Which is: 1
[2023-02-16T15:47:07.959Z] [  FAILED  ] TimingsTest.Overflow (0 ms)
TimingsTest.Overflow
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1522/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1196/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STExpiryPagerTest.MB_25650/persistent_nexus_couchstore_magma_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STExpiryPagerTest.MB_25650/persistent_nexus_couchstore_magma_full_eviction
[2023-02-16T15:43:05.141Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1672: Failure
[2023-02-16T15:43:05.141Z] Expected equality of these values:
[2023-02-16T15:43:05.141Z]   cb::engine_errc::would_block
[2023-02-16T15:43:05.141Z]     Which is: would block
[2023-02-16T15:43:05.141Z]   getKeyFn(key_1)
[2023-02-16T15:43:05.141Z]     Which is: no memory
[2023-02-16T15:43:05.141Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1675: Failure
[2023-02-16T15:43:05.141Z] Expected equality of these values:
[2023-02-16T15:43:05.141Z]   cb::engine_errc::no_such_key
[2023-02-16T15:43:05.141Z]     Which is: no such key
[2023-02-16T15:43:05.141Z]   getKeyFn(key_1)
[2023-02-16T15:43:05.141Z]     Which is: no memory
[2023-02-16T15:43:05.141Z] Key with TTL:10 should be removed.
[2023-02-16T15:43:05.141Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1700: Failure
[2023-02-16T15:43:05.141Z] Expected equality of these values:
[2023-02-16T15:43:05.141Z]   cb::engine_errc::no_such_key
[2023-02-16T15:43:05.141Z]     Which is: no such key
[2023-02-16T15:43:05.141Z]   getKeyFn(key_1)
[2023-02-16T15:43:05.141Z]     Which is: would block
[2023-02-16T15:43:05.141Z] Key with TTL:10 should be removed.
[2023-02-16T15:43:05.141Z] [  FAILED  ] EphemeralOrPersistent/STExpiryPagerTest.MB_25650/persistent_nexus_couchstore_magma_full_eviction, where GetParam() = "bucket_type=persistent:backend=nexus:nexus_primary_backend=couchstore:nexus_secondary_backend=magma:item_eviction_policy=full_eviction" (57 ms)
EphemeralOrPersistent/STExpiryPagerTest.MB_25650/persistent_nexus_couchstore_magma_full_eviction
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1196/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1129/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22765/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1158/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
